--- a/depot/app/views/carts/_cart.html.erb
+++ b/depot/app/views/carts/_cart.html.erb
@@ -13,7 +13,5 @@
 
 </table>
 
-<!-- START_HIGHLIGHT -->
-<%= button_to 'Empty cart', cart, method: :delete,
-#END_HIGHLIGHT
-    data: { confirm: 'Are you sure?' } %>
+<%= button_to 'Checkout', new_order_path, method: :get %>
+<%= button_to 'Empty cart', cart, method: :delete, data: { confirm: 'Are you sure?' } %>
