--- a/depot/app/views/layouts/application.html.erb
+++ b/depot/app/views/layouts/application.html.erb
@@ -22,11 +22,18 @@
         <% end %>
       <% end %>
       <ul>
-        <li><a href="http://www....">Home</a></li>
-        <li><a href="http://www..../faq">Questions</a></li>
-        <li><a href="http://www..../news">News</a></li>
-        <li><a href="http://www..../contact">Contact</a></li>
+        <li><%= link_to 'Home', store_path %></li>
+        <% if session[:user_id] %>
+          <li><%= link_to 'Orders', orders_path %></li>
+          <li><%= link_to 'Products', products_path %></li>
+          <li><%= link_to 'Users', users_path %></li>
+        <% end %>
       </ul>
+      <% if session[:user_id] %>
+        <%= button_to 'Logout', logout_path, method: :delete %>
+      <% else %>
+        <%= link_to 'Login', login_path %>
+      <% end %>
     </div>
     <div id="main">
       <%= yield %>
