--- a/depot/app/views/layouts/application.html.erb
+++ b/depot/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Pragprog Books Online Store</title>
+  <title><%= t('.window_title') %></title>
   <%= stylesheet_link_tag    "application", media: "all",
     "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
@@ -12,7 +12,7 @@
 <body class="<%= controller.controller_name %>">
   <div id="banner">
     <%= image_tag("logo.png") %>
-    <%= @page_title || "Pragmatic Bookshelf" %>
+    <%= @page_title || t('.title') %>
   </div>
   <div id="columns">
     <div id="side">
@@ -22,7 +22,7 @@
         <% end %>
       <% end %>
       <ul>
-        <li><%= link_to 'Home', store_path %></li>
+        <li><%= link_to t('.home'), store_path %></li>
         <% if session[:user_id] %>
           <li><%= link_to 'Orders', orders_path %></li>
           <li><%= link_to 'Products', products_path %></li>
