--- a/depot/app/views/layouts/application.html.erb
+++ b/depot/app/views/layouts/application.html.erb
@@ -3,9 +3,9 @@
 <html>
 <head>
   <title><%= t('.window_title') %></title>
-  <%= stylesheet_link_tag    "application", media: "all",
-    "data-turbolinks-track" => true %>
+  <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
+  <%= auto_discovery_link_tag(:atom, products_url(format: 'atom')) %>
   <%= csrf_meta_tags %>
 </head>
 <!-- END:head -->
@@ -19,7 +19,7 @@
       <%= javascript_tag "$('.locale input').hide()" %>
     <% end %>
     <%= image_tag("logo.png") %>
-    <%= @page_title || t('.title') %>
+    <%= page_title %>
   </div>
   <div id="columns">
     <div id="side">
@@ -29,11 +29,11 @@
         <% end %>
       <% end %>
       <ul>
-        <li><%= link_to t('.home'), store_path %></li>
+        <li><%= link_to_unless_current t('.home'), store_path %></li>
         <% if session[:user_id] %>
-          <li><%= link_to 'Orders', orders_path %></li>
-          <li><%= link_to 'Products', products_path %></li>
-          <li><%= link_to 'Users', users_path %></li>
+          <li><%= link_to_unless_current 'Orders', orders_path %></li>
+          <li><%= link_to_unless_current 'Products', products_path %></li>
+          <li><%= link_to_unless_current 'Users', users_path %></li>
         <% end %>
       </ul>
       <% if session[:user_id] %>
