--- a/depot/app/views/products/index.html.erb
+++ b/depot/app/views/products/index.html.erb
@@ -14,6 +14,7 @@
     </td>
     <td class="list_actions">
       <%= link_to 'Show', product %><br/>
+      <%= link_to 'who bought', who_bought_product_path(product, format: 'atom') %>
       <%= link_to 'Edit', edit_product_path(product) %><br/>
       <%= link_to 'Destroy', product, method: :delete,
                   data: { confirm: 'Are you sure?' } %>
