--- a/depot/app/views/orders/index.html.erb
+++ b/depot/app/views/orders/index.html.erb
@@ -13,21 +13,13 @@
     </tr>
   </thead>
 
-  <tbody>
-    <% @orders.each do |order| %>
-      <tr>
-        <td><%= order.name %></td>
-        <td><%= order.address %></td>
-        <td><%= order.email %></td>
-        <td><%= order.pay_type %></td>
-        <td><%= link_to 'Show', order %></td>
-        <td><%= link_to 'Edit', edit_order_path(order) %></td>
-        <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+  <tbody id="orders">
+    <%= render @orders %>
   </tbody>
 </table>
 
 <br>
 
 <%= link_to 'New Order', new_order_path %>
+
+<p><%= paginate @orders, remote: true %></p>
